Support jdk12